add isDown and hasMargin props to Button, and change styles

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/tachyons.4.7.3.min.css">
   </head>
-  <body class="bg-light-red white">
+  <body class="bg-light-red near-white sans-serif">
     <div id="root"></div>
   </body>
 </html>
