add noscript tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/tachyons.4.7.3.min.css">
   </head>
   <body class="bg-light-red near-white sans-serif">
+    <noscript>
+      <p class="ma4">Sorry - this requires JavaScript.</p>
+    </noscript>
     <div id="root"></div>
   </body>
 </html>
